# messaging-service

./: .cursorrules  .gitignore  ARCHITECTURE.md  ASYNC_MODE_QUICK_REFERENCE.md  CACHE_FIX_EXPLANATION.md  CACHING_IMPLEMENTATION_SUMMARY.md  Dockerfile  ERROR_HANDLING.md  FIXES_APPLIED.md  FIX_SUMMARY.md  GOOD_NEWS.md  IMPLEMENTATION_COMPLETE.md  INDEX_OPTIMIZATION.md  INDEX_QUERY_MAPPING.md  INDEX_VERIFICATION.md  LEGACY_API.md  MESSAGE_FLOW_TESTING.md  Makefile  NEW_TEST_SCRIPT_GUIDE.md  PRD.md  QUICK_START.md  RATE_LIMITING_SUMMARY.txt  README.md  REDIS_CACHING.md  REDIS_QUEUE_VERIFICATION.md  RUN_GUIDE.md  RUN_TESTS.md  SETUP_INSTRUCTIONS.md  START_STOP.md  SYNC_VS_ASYNC_PROCESSING.md  TERMINAL_USAGE.md  TEST_FLOW_SUMMARY.md  VERIFICATION_SUMMARY.md  WEBHOOK_QUEUE_EXPLANATION.md  WEBHOOK_TEST_FIXES.md  WHAT_WAS_DONE.txt  alembic.ini  cursor-context.md  db_verify_output.txt  docker-compose.yml  (+12 more)
alembic/: env.py
alembic/versions/: 001_initial_migration.py  002_add_threads_and_topics.py  9d1eba11bc7a_remove_unique_constraint_participants.py  d30531457b83_enforce_participants_not_null.py
app/: __init__.py  main.py
app/api/: __init__.py  legacy_routes.py
app/api/v1/: __init__.py  conversations.py  health.py  messages.py  models.py  webhooks.py
app/core/: __init__.py  config.py  observability.py
app/db/: __init__.py  redis.py  session.py
app/models/: __init__.py  database.py
app/providers/: __init__.py  base.py
app/services/: __init__.py  conversation_service.py  message_service.py  webhook_service.py
app/workers/: __init__.py  message_processor.py
tests/: __init__.py  check_schema.py  conftest.py
tests/integration/: test_api.py  test_message_flow.py  test_rate_limiting.py  test_regression.py  test_threads.py  test_threads_topics.py  verify_redis_queue.py
tests/postman/: messaging_service.postman_collection.json
tests/unit/: test_api_extensions.py  test_api_v1_messages.py  test_config.py  test_conversation_service.py  test_dependencies.py  test_health_check.py  test_legacy_routes.py  test_main_smoke.py  test_message_processor.py  test_message_service.py  test_models.py  test_observability.py  test_providers.py  test_rate_limiting.py  test_redis_caching.py  test_webhook_service.py
